[package]
name = "log_execution_time"
version = "0.1.1"
edition = "2021"
authors = ["Satish Babariya <satish.babariya@gmail.com>"]
description = "A Rust procedural macro to log the execution time of functions."
documentation = "https://docs.rs/log_execution_time"
homepage = "https://github.com/satishbabariya/log-execution-time-rs"
repository = "https://github.com/satishbabariya/log-execution-time-rs"
license = "MIT"

[dependencies]
quote = "1.0.38"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true
